# act_lerobot_preprocessing

./: Makefile  README.md  pyproject.toml
src/cameras/filtered_opencv/: configuration_filtered_opencv.py  filtered_opencv_camera.py
src/config/: __init__.py  configs.py
src/scripts/: clean_lerobot_cache.py  eval.py  eval_all.py  gradcam_act.py  lerobot_record_filtered.py
src/um_act_lerobot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/visualization/: __init__.py  act_gradcam.py
